--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
+  },
+  "imports": {
+    "#components/*": "./src/components/*",
+    "#helpers/*": "./src/helpers/*"
   }
 }
