--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
   },
+  "engines": {
+    "node": ">12.19.0"
+  },
   "imports": {
     "#components/*": "./src/components/*",
     "#helpers/*": "./src/helpers/*"
