--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack -w"
+    "build-dev": "webpack -w",
+    "test1": "jest",
+    "test2": "react-scripts test --env=jsdom"
   },
   "repository": {
     "type": "git",
@@ -19,15 +21,24 @@
   "homepage": "https://github.com/TeamClassix/FECcapstone#readme",
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "global-jsdom": "^8.1.0",
+    "jest": "^27.0.6",
+    "jsdom": "^16.6.0",
     "nodemon": "^2.0.12",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "jest-cli": "^27.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
