--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "@testing-library/react": "^12.0.0",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "global-jsdom": "^8.1.0",
     "jest": "^27.0.6",
     "jsdom": "^16.6.0",
@@ -37,6 +43,7 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "jest-cli": "^27.0.6",
     "react": "^17.0.2",
