--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack -w",
-    "server-dev": "node server/server.js"
+    "server-dev": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
