--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-dev": "webpack -w",
     "test1": "jest",
     "test2": "react-scripts test --env=jsdom",
-    "server-dev": "node server/server.js"
+    "server-dev": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
