--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0"
   },
   "engines": {
