--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "jest-cli": "^27.0.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest-cli": "^27.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.0"
   },
   "engines": {
