--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/TeamClassix/BIND#readme",
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
@@ -34,13 +35,17 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.14.8",
     "axios": "^0.21.1",
+    "core-js": "^3.15.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.0"
   },
   "engines": {
@@ -51,6 +56,6 @@
     "#helpers": "./server/helpers/index.js",
     "#components/*": "./client/src/components/*",
     "#helpers/*": "./client/src/helpers/*",
-    "#contexts/*": "./client/src/contexts/*"
+    "#contexts": "./client/src/contexts/Contexts.jsx"
   }
 }
