--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-share": "^4.4.0",
+    "react-zoom-pan-pinch": "^2.1.3",
     "styled-components": "^5.3.0"
   },
   "engines": {
