--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest-cli": "^27.0.6",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
