--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/TeamClassix/BIND#readme",
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
